# AR

./: .gitignore  .gitmodules
Lab1/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Lab1/catkin_ws/logs/second_package/: build.cmake.001.log.stderr  build.cmake.003.log.stderr  build.make.000.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.011.log.stderr
Lab1/catkin_ws/src/first_package/: package.xml
Lab1/catkin_ws/src/ros_package_template/: CMakeLists.txt  package.xml
Lab1/catkin_ws/src/second_package/: CMakeLists.txt  package.xml
Lab2/catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Lab2/catkin_ws/logs/p12_arob_lab2/: build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.045.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr
Lab2/catkin_ws/src/p12_arob_lab2/: CMakeLists.txt  README.md
Lab3/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Lab3/catkin_ws/logs/p12_arob_lab2/: build.check.001.log.stderr
Lab3/catkin_ws/logs/p12_arob_lab3/: build.make.008.log.stderr  build.make.009.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  (+11 more)
Lab4/catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Lab5/catkin_ws/: frames.gv
Lab5/catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Lab6/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  setup.bash  setup.sh  setup.zsh
arob_mpc/: CMakeLists.txt
arob_mpc/src/: CMakeLists.txt  drone_race.cpp  mpc_custom.cpp
catkin_ws/devel/: .catkin
catkin_ws/src/arob_mpc/: CMakeLists.txt  install_ipopt.sh  mpc.launch
project/Submission/src/: README.md
project/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
(+2692 files in other folders)
